--- a/query/CMakeLists.txt
+++ b/query/CMakeLists.txt
@@ -4,4 +4,4 @@ project(query)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(query query.cpp)
-include_directories(../)
+include_directories(../smart_ptr)
